[package]
name = "jiragen-cli"
description = "A command line tool to send bulk issue creation requests to JIRA from a .csv file."
version = "0.10.0"
authors = ["Kai Yao <kai.b.yao@gmail.com>", "Ken Cross <kenny.kor.seo@gmail.com>"]
edition = "2021"

repository = "https://github.com/Accruent/jiragen"
categories = ["command-line-utilities"]
documentation = "https://github.com/Accruent/jiragen/tree/master/jiragen-cli"
keywords = ["jira"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["unicode", "derive"] }
comfy-table = "6.1"
csv = "1.1"
itertools = "0.10.5"
jiragen = {path = "../jiragen-lib"}
serde_json = "1.0"

[[bin]]
name = "jiragen"
path = "src/main.rs"
doc = false
